<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Οδηγός για σκονάκια</string>
    <string name="welcome_text">Καλως ήλθατε στον οδηγό για σκονάκια.</string>
    <string name="intro_text">Σκοπός αυτής της εφαρμογής είναι να πάρουμε στα χέρια μας το πτυχίο, γιατί όπως λέει και ο ελληνικός λαός τα πτυχία κόποις κτώνται.</string>
    <string name="intro_button">Συνέχεια</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="tropoiitems">
        <item>Κλασικό Σκονάκι</item>
        <item>Θρανίο</item>
        <item>Χαρτί μέσα σε στυλό</item>
        <item>Σμίκρυνση</item>
        <item>Μπουκάλι για σκονάκι</item>
        <item>Διαφάνειες</item>
        <item>Χαραγμα πάνω σε στυλό</item>
        <item>Χαρτί μέσα σε στυλό</item>
        <item>Στυλό για σκονάκι</item>
        <item>Bluetooth</item>
        <item>Ψείρα</item>
        <item>Αριθμομηχανή</item>
        <item>Ζώνη παντελονιού</item>
        <item>Τιράντες</item>
        <item>Γάζες</item>
        <item>Κινητό τηλέφωνο</item>
        <item>Μαυρη Διαφάνεια</item>
        <item>Αλλαγη κόλλας σε τουαλλετα</item>
        <item>Χαρτομάντηλα</item>
        <item>Αντιγραφή απο διπλανό</item>
        <item>Ηχογράφηση</item>
        <item>Φωτογραφία τα θέματα</item>
        <item>Σόλες Παποουτσιών</item>
        <item>Αλλαγή φωτογραφίας πάσου</item>
        <item>Σημεία του σώματος</item>
        <item>Κασετίνα</item>
        <item>Στυλός με αόρατο μελάνι</item>
        <item>Γυαλιά με κάμερα</item>
        <item>Ρολόι για σκονάκι</item>
    </string-array>

    <string name="text_den_prepei">Πριν όμως δεις τους τρόπους παρακάτω μάθε πώς να συμπεριφέρεσαι στις εξετάσεις.</string>
    <string name="tropoi">Συνέχεια</string>
    <string name="title_activity_tropoi">Tropoi</string>
    <string name="kefalida">Στις εξετάσεις δεν πρέπει να κάνεις τα εξής: </string>
    <string name="prwto">1) Δεν πρέπει να φοράς ρούχα με έντονα χρώματα γιατι το μάτι του εξεταστή πέφτει κατευθείαν επάνω σου.</string>
    <string name="deutero">2) Δεν πρέπει να φοράς πολυ στενά και κολητά ρούχα για να έχεις ελευθερία κινήσεων και άνεση.</string>
    <string name="trito">3) Δεν πρέπει να κοιτάς συνέχεια τον επιτηρητή γιατι καρφώνεσαι μόνος/μόνη σου.</string>
    <string name="tetarto">4) Δεν πρέπει να πηγαίνεις στην αίθουσα ακριβώς την ώρα που γράφεις. Τουλάχιστον μισή ή μια ώρα πιο πρίν για να μπορείς να προετοιμάσεις το έδαφος.</string>
    <string name="pempto">5) Αν έχεις τη δυνατότητα απέφυγε τις αμφιθεατρικές αίθουσες, αλλιώς προτίμησε να καθίσεις στη μέση.</string>
    <string name="ekto">6) Αν ο επιτηρητής σε έχει υποψιαστεί προσπάθησε να κάνεις ορισμένες ερωτήσεις προκειμένου να του ρίξεις στάχτη στα μάτια, λέγοντας κλασσικές ατάκες όπως στο βιβλίο είχε εκείνο το σχεδιάγραμμα εσείς το θέλετε ή θα θεωρηθεί η απάντησή μου ολοκληρωμένη όπως είναι;</string>
    <string name="ebdomo">7) Οι τρόποι που θα διαβάσεις εδώ καλό θα είναι να έχουν προετοιμαστεί απο το σπίτι για να αποφύγεις στιγμές αμηχανίας.</string>

    <string-array name="listadrawer">
        <item>Αξιολογήστε αυτήν την εφαρμογή</item>
        <item>Στείλτε ιδέες</item>
    </string-array>

    <string name="drawerOpen">Επιλέξτε απο το μενού</string>
    <string name="drawerClosed">Οδηγός για σκονάκια</string>
    <string name="title_activity_list_item">ListItemActivity</string>
    <string name="description"><b><u>Περιγραφή</u></b></string>
    <string name="usage"><b><u>Χρήση</u></b></string>
    <string name="buy">Αγόρασε το</string>

</resources>
