<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19dp"
                android:layout_alignParentBottom="true"
                android:layout_alignLeft="@+id/usage"
                android:layout_alignStart="@+id/usage"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/intro_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="46dp"
                android:id="@+id/usage" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_button"
                android:id="@+id/button"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="37dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>


    <RelativeLayout
        android:layout_gravity="start"
        android:layout_width="300dp"
        android:background="#ccc"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listViewDrawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>

        </RelativeLayout>

</android.support.v4.widget.DrawerLayout>